# World-building-saya

./: Animals Species Encyclopedia.docx  Gameplay.docx  Last monster.docx  Magic explanation.docx  Monster 2.docx  Monster 3.docx  Monster 4.docx  Monster 5.docx  Monster Introduction.docx  Penambahan World Building.docx  README.md  Race 1.docx  Race encyclopedia 1.docx  SPECIES MANA HEARTH.docx  Species 2.docx  Species 3.docx  Species 5.docx  WorldBuilding Introduction.docx  Worldbuilding 3.docx  Worldbuilding 4.docx  Worldbuilding 5.docx  Worldbuilding almost finale.docx  Worldbuilding cities Place(4.5).docx  additional species.docx  pyproject.toml  racial powerscaling.docx  spesies tambahah.docx  worldbuilding 6.docx  worldbuilding finale.docx
src/worldbuilding_game/: __init__.py  cli.py  data_loader.py  entities.py  game.py  rules.py
src/worldbuilding_game/ai/: __init__.py  engine.py  policy.py
src/worldbuilding_game/data/: monsters.json  quests.json  races.json  world.json
src/worldbuilding_game/systems/: __init__.py  actions.py  character.py  rules.py  save.py
tests/: test_ai.py  test_character.py  test_cli.py  test_game_data.py  test_rules_systems.py  test_save.py
